syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package country.v1;

option go_package = "engineer-country-management/pkg/v1/country";

service CountryService {
  rpc AddCountry (AddCountryRequest) returns (Country);
  rpc ListCountries(google.protobuf.Empty) returns (Countries);
  rpc GetCountryById (GetCountryRequest) returns (Country);
  rpc UpdateCountry (UpdateCountryRequest) returns (Country);
  rpc DeleteCountry (DeleteCountryRequest) returns (Country);
}

message Countries {
  repeated Country countries = 1;
}

message AddCountryRequest {
  string country_name = 1;
}

message Country {
  int64 id = 1;
  string country_name = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message UpdateCountryRequest {
  int64 id = 1;
  string country_name = 2;
}

message DeleteCountryRequest {
  int64 id = 1;
}

message GetCountryRequest {
  int64 id = 1;
}

